# agentic-task-executor

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/agents/: backend-dev.md  backend-test-dev.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  execution_graph.py  graph.py  prompts.py  state.py
backend/app/agent/tools/: __init__.py  calculator.py  create_artifact.py  datetime_tool.py  read_artifact.py  web_fetch.py  web_search.py
backend/app/api/: artifacts.py  chat.py  execute.py  health.py  sessions.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  artifact.py  base.py  data_item.py  execution_log.py  message.py  session.py  task.py
backend/app/services/: __init__.py  agent_service.py  artifact_service.py  execution_connection_service.py  execution_log_service.py  message_service.py  session_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_execution_graph.py  test_planning_graph.py  test_task_service.py
backend/tests/unit/tools/: test_calculator.py  test_datetime.py
docs/: README.md  decisions.md  deployment.md  development-workflow.md  further-development-ideas.md  how-it-works.md  testing-plan.md
frontend/: .dockerignore  .oxfmtrc.json  .oxlintrc.json  Dockerfile  cloudbuild.yaml  components.json  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
supabase/: config.toml
(+78 files in other folders)
